# Pairing-based-Anonymous-Credentials

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  trusted_setup.rs
