[package]
name = "anonymous-creds"
version = "0.1.0"
edition = "2021"
description = "Implementation of Re-randomizable Credentials"
license = "MIT"

[dependencies]
ark-ff = "0.4.2"        
ark-ec = "0.4.2"        
ark-std = "0.4.0"       
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.2"
rand = "0.8"
sha2 = "0.10"
thiserror = "1.0"


